--- a/index.html
+++ b/index.html
@@ -8,37 +8,38 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" 
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" 
         crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<script src="assets/jquery-3.3.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<style>
-        body {
-            background-color: #f8f8f8;
-        }
-		a {
-			text-decoration: none !important;
-		}
-		a.remove {
-			color: red; 
-			float: right;
-		}
-
-	</style>
 </head>
 <body>
 
-<!-- Nav tabs -->
-<ul class="nav nav-tabs">
-    <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#arrayFormatter">Array Formatter</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#jsonToYaml">Json To Yaml</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#writeDocsWithSwagger">Write Docs With Swagger</a>
-    </li>
-</ul>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="container">
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <!-- Nav tabs -->
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#arrayFormatter">Array Formatter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#jsonToYaml">Json To Yaml</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#writeDocsWithSwagger">Write Docs With Swagger</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+</nav>
   
 <!-- Tab panes -->
 <div class="tab-content">
@@ -55,8 +56,8 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="arrayOutput">Output</label>
-                    <a href="#" onclick="event.preventDefault(); copyArrayFormatterResult();" 
-                        class="float-right" style="color: #444;">
+                    <a href="#" onclick="copyToClipboard(this.nextElementSibling);" 
+                        class="clipboard">
                         <span>Copy to clipboard</span>
                         <i class="fa fa-clipboard"></i>
                     </a>
@@ -79,6 +80,11 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="yamlTextarea">Yaml</label>
+                    <a href="#" onclick="copyToClipboard(this.nextElementSibling);" 
+                        class="clipboard">
+                        <span>Copy to clipboard</span>
+                        <i class="fa fa-clipboard"></i>
+                    </a>
                     <textarea id="yamlTextarea" rows="20" class="form-control"></textarea>
                 </div>
             </div>
@@ -133,8 +139,10 @@
                     <input type="text" name="type" id="type" class="form-control" placeholder="Type" required>
                 </div>
                 <div class="form-group">
-                    <input type="checkbox" name="required" id="required" required>
-                    <label for="required">Required</label>
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" name="required" id="required">
+                        <label class="custom-control-label" for="required">Required</label>
+                    </div>
                 </div>
                 <button type="button" class="btn btn-primary" onclick="saveParameter(this)">
                     Save
@@ -162,23 +170,29 @@
             </form>
         </div>
 
-        <div class="card card-body mb-3">
-            <button class="btn btn-success" onclick="getResult()">Get result</button>
-            <hr>
-            <h4 class="mb-3">
-                Result
-                
-            </h4>
-            <textarea id="resultBox" rows="15" class="form-control" disabled placeholder="The results will be showen here"></textarea>
+        <div class="card mb-3">
+            <div class="card-body">
+                <button class="btn btn-success" onclick="getResult()">Get result</button>
+                <hr>
+                <a href="#" onclick="copyToClipboard(document.getElementById('resultBox'))" 
+                    class="clipboard">
+                    <span>Copy to clipboard</span>
+                    <i class="fa fa-clipboard"></i>
+                </a>
+                <h4 class="mb-3">Result</h4>
+                <textarea id="resultBox" rows="15" class="form-control" placeholder="The results will be showen here"></textarea>
+            </div>
         </div>
     </div>
+
 </div>
 
 <script type="module" src="assets/js/tools.js"></script>
 <script>
 
-    const copyArrayFormatterResult = () => {
-        document.getElementById('arrayOutput').select();
+    const copyToClipboard = (text) => {
+        event.preventDefault();
+        text.select();
         document.execCommand("copy");
     }
 
